--- a/src/components/Orbit/Orbit.css
+++ b/src/components/Orbit/Orbit.css
@@ -1,13 +1,17 @@
 .orbit {
-    border: solid white 1px;
-    border-radius: 50%;
-    position: absolute;
-    /* -webkit-border-radius: 50%;
-     -webkit-animation: spin-right 20s linear infinite;
-    animation: spin-right 20s linear infinite; */
+  height: 100%;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 3px;
+  box-sizing: border-box;
+
+  -webkit-border-radius: 50%;
+  -webkit-animation: spin-right 20s linear infinite;
+  animation: spin-right 20s linear infinite;
 }
 
-/* @-webkit-keyframes spin-right {
+@-webkit-keyframes spin-right {
   100% {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
@@ -15,4 +19,10 @@
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
   }
-} */
+}
+
+.electrons-container {
+  width: 80px;
+  height: 80px;
+  margin: 1%;
+}
