--- a/src/components/Orbit/Orbit.css
+++ b/src/components/Orbit/Orbit.css
@@ -3,7 +3,7 @@
   width: 100%;
   border: 1px solid white;
   border-radius: 50%;
-  padding: 3px;
+  padding: 15px;
   box-sizing: border-box;
 
   -webkit-border-radius: 50%;
@@ -22,7 +22,10 @@
 }
 
 .electrons-container {
-  width: 80px;
-  height: 80px;
-  margin: 1%;
+
+  z-index: 999;
+  width: 400px;
+  height: 400px;
+  grid-column-start: 5;
+  grid-column-end: 10;
 }
