--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
-  
+  display: grid; 
+  grid-template-columns: 1;
+  grid-auto-rows: 1; 
+  justify-items: center;
+  align-items: center; 
+  background-color: #186C90;
+  color: white;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
