--- a/src/components/Orbit/Orbit.css
+++ b/src/components/Orbit/Orbit.css
@@ -7,11 +7,11 @@
   padding: 15px;
   box-sizing: border-box;
   -webkit-border-radius: 50%;
-  -webkit-animation: spin-right 20s linear infinite;
-  animation: spin-right 20s linear infinite;
+  -webkit-animation: spin-right 40s linear infinite;
+  animation: spin-right 40s linear infinite;
 }
 
-@-webkit-keyframes spin-right {
+/* @-webkit-keyframes spin-right {
   100% {
     -webkit-transform: rotate(360deg);
     -moz-transform: rotate(360deg);
@@ -19,5 +19,5 @@
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
   }
-}
+} */
 
